# convertorio-sdk

./: .gitignore  .gitignore-php  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  examples.php  publish-nodejs.sh  test-python-sdk.py
docs/go/: CHANGELOG.md  README.md
docs/java/: CHANGELOG.md  README.md
docs/n8n/: README.md
docs/nodejs/: README.md
docs/php/: README.md
docs/python/: README.md
examples/dotnet/: AccountInfo.cs  AdvancedOptions.cs  BasicConversion.cs  BatchConversion.cs  WithEvents.cs
examples/go/: examples.go  go.mod
examples/java/: AccountManagement.java  AdvancedOptions.java  BasicConversion.java  WithEventListeners.java
examples/nodejs/: README.md  account-info.js  basic-conversion.js  batch-conversion.js  package.json  with-events.js
examples/ruby/: Gemfile  README.md  account_info.rb  advanced_options.rb  basic_conversion.rb  batch_conversion.rb  with_events.rb
libs/dotnet/: CHANGELOG.md  LICENSE  NUGET_PUBLISH.md  README.md
libs/go/: LICENSE  README.md  client.go  go.mod  types.go
libs/java/: .gitignore  LICENSE  README.md  SIGNING-INSTRUCTIONS.md  compile.bat  pom.xml
libs/n8n/: .gitignore  .npmignore  CHANGELOG.md  LICENSE.md  README.md  eslint.config.mjs  n8n-nodes-convertorio-1.0.0.tgz  package-lock.json  package.json  tsconfig.json
libs/nodejs/: .npmignore  CHANGELOG.md  README.md  examples.js  index.d.ts  index.js  package-lock.json  package.json
libs/php/: CHANGELOG.md  README.md  composer.json
libs/python/: .gitignore  CHANGELOG.md  README.md  examples.py  publish-to-pypi.bat  pyproject.toml  setup.py
libs/python/convertorio_sdk/: __init__.py  client.py
src/: ConvertorioClient.php
(+67 files in other folders)
