[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "convertorio-sdk"
version = "1.2.0"
description = "Official Convertorio SDK for Python - Convert images easily with a simple API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Convertorio", email = "support@convertorio.com"}
]
keywords = ["convertorio", "image", "conversion", "converter", "api", "sdk", "jpg", "png", "webp", "avif", "heic", "image-converter", "file-conversion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/SedeSoft/convertorio-sdk"
Documentation = "https://github.com/SedeSoft/convertorio-sdk/tree/main/docs/python"
Repository = "https://github.com/SedeSoft/convertorio-sdk"
Issues = "https://github.com/SedeSoft/convertorio-sdk/issues"

[tool.setuptools]
packages = ["convertorio_sdk"]
